--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  hive: ^2.2.3
+  path_provider: ^2.0.11
+  file_picker: ^5.2.3
+  permission_handler: ^10.2.0  # <-- new dependency
 
 dev_dependencies:
   flutter_test:
